--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
               </div>
             </transition>
 
+            <transition name="fade">
+              <div v-if="performingRequest" class="loading">
+                <p>Loading...</p>
+              </div>
+            </transition>
+
           <button @click="login" style="float:right" class="button">Log In</button>
         </form>
         <transition name="fade">
