--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             type="password"
             placeholder="******"
             id="password1"/>
+            <transition name="fade">
+              <div v-if="performingRequest" class="loading">
+                <p>Loading...</p>
+              </div>
+            </transition>
 
           <button @click="login" style="float:right" class="button">Log In</button>
         </form>
