--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <html>
   <div id="login">
     <transition name="fade">
@@ -17,7 +15,7 @@
             v-model.trim="loginForm.password"
             type="password"
             placeholder="******"
-            id="password1"/>
+            id="password1"/>git
             <v-container id="regular-tables" tag="section">
                 <base-material-card dark>
                   <div class="row">
@@ -57,4 +55,3 @@
     </section>
   </div>
 </html>
->>>>>>> 83b1d448c41bbac6f8f641454c0c9cde8e877062
